Bug 82025 - Russian Help crash office when invoke for Writer, Draw, Impress
Summary: Russian Help crash office when invoke for Writer, Draw, Impress
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
4.3.0.3 rc
Hardware: All All
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0 target:4.3.1
Keywords: regression
: 82331 82562 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-08-01 21:19 UTC by Venedict M. Dontsov
Modified: 2015-12-05 14:44 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Venedict M. Dontsov 2014-08-01 21:19:57 UTC
Steps for reproduce:
1. Install local Russian version 4.3.0.4
2. (On Linux) Change locale to Russian
3. Start Writer and invoke help system (press F1)
4. click the Index tab in Help window
5. Office crashes with "std::bad_alloc" message.
Comment 1 Roman Kuznetsov 2014-08-02 04:39:21 UTC
confirm bug
Comment 2 ape 2014-08-02 12:43:37 UTC
I confirm this bug:
Windows XP 64&32 bit editions; LibreOffice 4.3.0.3(rc3).
The Russian’s help Index makes crash of LibreOffice with message 'Fatal Error: Bad allocation'.
Comment 3 Julien Nabet 2014-08-08 10:36:26 UTC
*** Bug 82331 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2014-08-11 10:29:15 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ad40561d13e004ca4c532afb406675eea3c6a663

Resolves: fdo#82025 use strlen instead of stored length byte



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2014-08-11 10:44:43 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=712a286d1d430f91148600b52b6fc3d03881cf78&h=libreoffice-4-3

Resolves: fdo#82025 use strlen instead of stored length byte


It will be available in LibreOffice 4.3.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2014-08-13 15:37:48 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3434aceb1cdb306c339201e9e67d3920b338f9b3&h=libreoffice-4-3-1

Resolves: fdo#82025 use strlen instead of stored length byte


It will be available already in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Julien Nabet 2014-08-18 10:24:51 UTC
*** Bug 82562 has been marked as a duplicate of this bug. ***
Comment 8 Maksim 2014-08-18 11:26:21 UTC
LibreOffice_4.3.1.1_Win_x86 + LibreOffice_4.3.0_Win_x86_helppack_ru, Windows 7. The problem still exist.
Comment 9 Maksim 2014-08-18 11:46:11 UTC
4.3.2.0.0_Win_x86 is working with English interface
Comment 10 Maxim Monastirsky 2014-08-18 11:48:42 UTC
(In reply to comment #8)
> LibreOffice_4.3.1.1_Win_x86 + LibreOffice_4.3.0_Win_x86_helppack_ru, Windows
> 7. The problem still exist.
You should wait for RC2.
Comment 11 Julien Nabet 2015-12-05 14:44:04 UTC
cleanup keywords