Resolves: fdo#82025 use strlen instead of stored length byte

Change-Id: I58cf2391d7bf2480cd12d2b1b4cf73f346f4f95f
(cherry picked from commit ad40561d13e004ca4c532afb406675eea3c6a663)
Reviewed-on: https://gerrit.libreoffice.org/10878
Reviewed-by: David Tardon <dtardon@redhat.com>
Tested-by: David Tardon <dtardon@redhat.com>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Reviewed-by: Eike Rathke <erack@redhat.com>